[gd_scene load_steps=13 format=1]

[ext_resource path="res://Defendiloj/Pistoloj/Ondilo/Ondilo.gd" type="Script" id=1]
[ext_resource path="res://Defendiloj/Pistoloj/Kanono/kanono_elektajxo.png" type="Texture" id=2]
[ext_resource path="res://Defendiloj/Pistoloj/Ondilo/ondilo.png" type="Texture" id=3]
[ext_resource path="res://Defendiloj/Pistoloj/Ondilo/ondilo_enreta.png" type="Texture" id=4]
[ext_resource path="res://Defendiloj/Pistoloj/Kanono/gamo.png" type="Texture" id=5]
[ext_resource path="res://Defendiloj/Pistoloj/Ondilo/ondo.png" type="Texture" id=6]
[ext_resource path="res://Tiparoj/roboto.fnt" type="BitmapFont" id=7]
[ext_resource path="res://Defendiloj/Pistoloj/Ondilo/fajro.ogg" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 661.054

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 133.333

[sub_resource type="GDScript" id=3]

script/source = "extends Area2D

var tipo = \"Ondilo\""

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 165.637

[node name="Ondilo" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Elektumo" type="Sprite" parent="."]

visibility/opacity = 0.5
transform/rot = -1.77005e-13
transform/scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 2 )

[node name="Ondilo" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Ondilo"]

texture = ExtResource( 3 )

[node name="Enreta" type="Sprite" parent="Ondilo"]

texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

editor/display_folded = true
transform/rot = 8.14222e-13
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Limo" type="Sprite" parent="Area2D"]

visibility/behind_parent = true
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="Reta" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 1024
script/script = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reta"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Fiksata" type="Node2D" parent="."]

[node name="Ondo" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2048
collision/mask = 4100

[node name="Sprite" type="Sprite" parent="Ondo"]

texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ondo"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Nivelo" type="Label" parent="."]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 2.4, 2.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -85.0
margin/top = -85.0
margin/right = 80.0
margin/bottom = 72.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fajro" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]

[connection signal="input_event" from="Reta" to="." method="_on_Reta_input_event"]

[connection signal="body_enter" from="Ondo" to="." method="_on_Ondo_body_enter"]


